// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransactionLink with deposit matches the snapshot 1`] = `
<div
  class="css-mglgiq"
>
  <button
    class="css-1vz2qhs"
    color="#9DB06A"
    type="text"
  >
    ?
  </button>
</div>
`;

exports[`CreateCustomTransactionLink with dispense matches the snapshot 1`] = `
<div
  class="css-mglgiq"
>
  <button
    class="css-ur956f"
    color="#E86C76"
    type="text"
  >
    ?
  </button>
</div>
`;
